--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ body {
       </div>
     </div>
     <h1 class="qr" >QRIS ALL PAYMENT</h1>
-    <img style="max-width: 100%;" src="images/qr.jpeg">        
+    <img style="max-width: 100%;" src="qr.jpeg">        
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.11/clipboard.min.js"></script>
     <script>
       function myFunction() {
